[tool.poetry]
name = "orbitech"
version = "0.1.0"
description = "graphql api to track satellites"
authors = ["david bibb"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.5"
pyorbital = "^1.5"
graphene = "^2.1"
aiohttp-graphql = "^1.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
